stave-macros/tests/fail/methods_missing_builder.rs
use stave_macros::methods;

struct Widget {
    name: String,
}

#[methods]
impl Widget {
    fn name(&self) -> &str {
        &self.name
    }
}

fn main() {}
